--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,4 +1,5 @@
 _repo: The-History-of-the-Life-of-the-Late-Mr-Jonathan-Wild-the-Great_5256
+_version: 0.1.0
 creator:
   author:
     agent_name: Fielding, Henry
