--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,5 +1,8 @@
 _repo: The-History-of-the-Life-of-the-Late-Mr-Jonathan-Wild-the-Great_5256
-_version: 0.1.0
+_version: 0.2.0
+covers:
+- cover_type: generated
+  image_path: cover.png
 creator:
   author:
     agent_name: Fielding, Henry
@@ -15,6 +18,8 @@ creator:
     url: http://www.gutenberg.org/2009/agents/537
     wikipedia: http://en.wikipedia.org/wiki/Henry_Fielding
 description: ''
+edition_identifiers:
+  edition_id: http://www.gutenberg.org/ebooks/5256#The-History-of-the-Life-of-the-Late-Mr-Jonathan-Wild-the-Great
 gutenberg_issued: '2004-03-01'
 gutenberg_type: Text
 identifiers:
